Fixed logo height on mobile

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -41,7 +41,7 @@ header, .header {
 
         .header__logo {
             height: 6rem;
-            margin: auto 0 auto 0.5rem;
+            margin: 2rem 0 auto 0.5rem;
             fill: $c-black;
             line: $c-black;
         };
